loleaflet/css/jssidebar.css
.sidebar * {
	font-family: var(--oxool-font);
	text-transform: none !important;
}

.sidebar .ui-content .unobutton {
	margin: 0;
	width: 24px;
	height: 24px;
	vertical-align: middle;
}

#document-container:not(.mobile) + #sidebar-dock-wrapper {
	width: 330px;
	padding: 0;
	border-left: 1px solid var(--gray-color) !important;
	border-right: 1px solid var(--gray-color) !important; /* for RTL mode */
	margin-top: 0 !important;
	box-sizing: border-box;
}

.sidebar .spinfieldcontainer input {
	width: 85px;
	border: 1px solid var(--gray-color);
	border-radius: var(--border-radius);
	height: 28px;
	padding-inline-start: 4px;
	position: relative;
	margin-inline-start: 8px;
	color: var(--color-text-dark);
	background-color: var(--color-background-dark);
}

.sidebar.spinfield {
	max-width: 104px;
	padding: 4px 0 4px 4px;
	height: 28px;
	box-sizing: border-box;
	margin-right: 1px;
}
.sidebar .spinfieldcontainer input:hover {
	border: 1px solid var(--gray-light-txt--color);
	color: var(--color-text-darker);
	background-color: var(--color-background-darker);
}

.spinfieldunit {
	font-size: 12px;
	color: var(--color-text-dark);
	margin: 5px;
	position: relative;
	margin-inline-start: calc(-40px);
}

.sidebar.ui-listbox {
	font-size: 13px;
	height: 28px;
	box-sizing: border-box;
	padding: 0 0px 0 4px;
	min-width: auto;
}
.sidebar.jsdialog.menubutton {
	padding: 4px 10px;
}
.sidebar.jsdialog.ui-listbox,
.sidebar.jsdialog.menubutton {
	min-width: 121px;
	max-width: 121px;
	box-sizing: border-box;
}

.menubutton.sidebar span {
	display: none;
	font-size: 10px;
}

.menubutton.sidebar:hover span {
	position: absolute;
	display: block;
	width: auto;
	background-color: #444;
	color: white;
	padding: 2px 4px;
	border-radius: 2px;
	white-space: nowrap;
	margin-inline-start: -14px;
}

#fontnamecombobox > .sidebar.jsdialog.ui-listbox,
#applystyle > .sidebar.jsdialog.ui-listbox {
	min-width: 186px;
}

#table-style {
	padding-left: 4px;
}

#gradientstyle > .sidebar.jsdialog.ui-listbox {
	width: 74px;
}

.sidebar.jsdialog.row > table.sidebar.jsdialog.ui-grid {
	width: 290px;
}

#table-grid3.sidebar.jsdialog.vertical > .sidebar.jsdialog.row > table.sidebar.jsdialog.ui-grid > tr.sidebar.jsdialog > td.sidebar.jsdialog > .sidebar.jsdialog.vertical > .sidebar.jsdialog.row > table.sidebar.jsdialog.ui-grid {
	width: 10px;
}

#fontsizecombobox > .sidebar.jsdialog.ui-listbox {
	min-width: 86px;
}

.sidebar.ui-expander {
	display: flex;
	justify-content: space-between;
	width: 290px;
	align-items: center;
	background: #ddd;
}

#selectcolor {
	display: flex;
	justify-content: flex-end;
}

.sidebar.jsdialog.cell > #table-box3 {
	width: 290px;
}

.sidebar.jsdialog.cell > #table-box3,
.sidebar.jsdialog.cell > #table-box4 {
	display: flex;
	justify-content: flex-end;
}

#ShadowPropertyPanel div#table-grid3 table#grid3 td:nth-child(1) {
	justify-content: flex-start;
}

#FIELD_TRANSPARENCY {
	height: 0;
	position: relative;
	bottom: 22px;
}

#transparency_label {
	position: relative;
	top: 12px;
}

#table-indentfieldbox {
	position: relative;
	left: -20px;
}

#table-box4.sidebar.jsdialog.vertical {
	width: auto;
}

div#negativenumbersred.checkbutton.jsdialog.sidebar,
div#thousandseparator.checkbutton.jsdialog.sidebar {
	height: 24px;
}

#settransparency, #fontheight,
#document-container:not(.presentation-doctype) ~ #sidebar-dock-wrapper .sidebar.jsdialog.vertical > .sidebar.jsdialog.row > table.sidebar.ui-grid > tr.sidebar > td.sidebar:last-child,
.sidebar.jsdialog.cell > #table-box3 > .sidebar.jsdialog.row > .sidebar.jsdialog.cell:last-child,
.sidebar.jsdialog.cell > #table-box4 > .sidebar.jsdialog.row > .sidebar.jsdialog.cell:last-child,
.sidebar.jsdialog.cell > #table-box4 > .sidebar.jsdialog.row > .sidebar.jsdialog.cell:nth-child(4) {
	display: flex;
	justify-content: flex-end;
}

#TableEditPanel #table-grid1 #grid1 > tr > td:nth-child(2) {
	display: inherit;
}

.sidebar.ui-drawing-area {
	max-width: 290px;
}

#NumberFormatPropertyPanel {
	width: 290px;
}
div#decimalplaces,
div#numberformatcombobox.jsdialog.sidebar.ui-listbox-container,
div#leadingzeroes.jsdialog.sidebar.spinfieldcontainer {
	text-align: right;
}
#leadingzeroes,
#leadingzeroeslabel {
	position: relative;
	left: 4px;
}
#decimalplaces {
	position: relative;
	left: 6px;
}

p#decimalplaceslabel.jsdialog.sidebar.ui-text,
p#denominatorplaceslabel.jsdialog.sidebar.ui-text {
	position: absolute;
}

div#box2.row.jsdialog.sidebar > .sidebar.jsdialog.row > .sidebar.jsdialog.cell,
div#box5.row.jsdialog.sidebar > .sidebar.jsdialog.cell {
	padding: 0;
}

.sidebar.ui-expander-label {
	color: var(--color-main-text);
	font-size: 12px;
	line-height: 22px;
	font-weight: bold;
	padding-left: 14px;
	padding-right: 14px; /* for RTL mode */
}

.sidebar.ui-expander-label:before {
	position: absolute;
	margin-inline-start: -12px;
	left: unset !important;
}

.sidebar.root-container.jsdialog > .jsdialog.sidebar {
	width: 100%;
}

#ScCellAppearancePropertyPanelPanelExpander #CellAppearancePropertyPanel table.jsdialog.sidebar.ui-grid,
#CellAppearancePropertyPanel table.jsdialog.sidebar.ui-grid tr.jsdialog.sidebar {
	display: flex;
}
#ScCellAppearancePropertyPanelPanelExpander #CellAppearancePropertyPanel table.jsdialog.sidebar.ui-grid {
	justify-content: space-between;
}

.sidebar-container > .root-container.jsdialog.sidebar {
	margin: 0;
}

td.jsdialog .jsdialog.cell.sidebar {
	padding: 2px;
	width: auto;
}

#sidebar-dock-wrapper #ParaPropertyPanelPanelExpander #box1 > div:last-of-type,
.spreadsheet-document + #sidebar-dock-wrapper #ScAlignmentPropertyPanelPanelExpander #box3 > div:last-of-type {
	display: table-row;
}

#sidebar-dock-wrapper #ParaPropertyPanelPanelExpander #box1 > div:last-of-type > div,
.spreadsheet-document + #sidebar-dock-wrapper #ScAlignmentPropertyPanelPanelExpander #box3 > div:last-of-type > div {
	padding: 2px;
}

.sidebar.jsdialog.checkbutton {
	font-size: 13px;
}

.sidebar .menu-entry-icon {
	width: 24px;
	height: 24px;
}

.ui-expander-icon-right .sidebar.unotoolbutton {
	margin: 0px !important;
}

.sidebar.unotoolbutton,
.sidebar #resetattr,
.sidebar #FormatPaintbrush{
	border: 1px solid transparent;
	margin-right: 5px;
}
#table-textorientbox.sidebar .jsdialog .radiobutton {
	border: 1px solid transparent;
}

/* non selected */
#clearFormatting, #FormatPaintbrush,
.hasnotebookbar .ui-content.unotoolbutton.has-label,
.hasnotebookbar .ui-content.unotoolbutton.inline,
.hasnotebookbar .ui-content.unotoolbutton:not(.has-label):not(.inline),
.sidebar.unotoolbutton {
	background-color: transparent;
	border: 1px solid transparent;
	color: var(--color-main-text);
	border-radius: var(--border-radius);
}
/* selected */
.hasnotebookbar .ui-content.unotoolbutton.selected.has-label,
.hasnotebookbar .ui-content.unotoolbutton.selected.inline,
.hasnotebookbar .ui-content.unotoolbutton.selected:not(.has-label):not(.inline),
.sidebar.unotoolbutton.selected {
	background-color: var(--color-background-dark);
	border: 1px solid transparent;
	color: var(--color-text-dark);
	border-radius: var(--border-radius);
}
/* selected hover */
.hasnotebookbar .ui-content.unotoolbutton.selected:hover,
.unotoolbutton.notebookbar:hover,
.hasnotebookbar .ui-content.unotoolbutton.selected:not(.has-label):not(.inline):hover,
#clearFormatting:hover,
#FormatPaintbrush:hover,
.sidebar.unotoolbutton:hover,
.sidebar.unotoolbutton.selected:hover,
.sidebar #resetattr:hover,
.sidebar #FormatPaintbrush:hover,
#table-textorientbox.sidebar .jsdialog .radiobutton:hover {
	outline: 1px solid var(--gray-light-txt--color);
	color: var(--color-text-darker);
	background-color: var(--color-background-darker) !important;
	border-radius: var(--border-radius);
}

.sidebar #font select,
.sidebar #fontsizecombobox select {
	margin: 0;
}

.ui-expander.jsdialog.sidebar .ui-expander-icon-right,
.ui-expander.jsdialog.sidebar .ui-expander-icon-right * {
	display: block;
	width: 10px;
	height: 10px;
	margin-right: 4px;
}

.ui-expander.jsdialog.sidebar .ui-expander-icon-right img {
	filter: brightness(2);
}

.ui-expander.jsdialog.sidebar .ui-expander-icon-right:hover img {
	filter: none;
}

#table-textorientbox.sidebar .jsdialog input[type='radio'] {
	background: none !important;
	width: auto;
	height: auto;
}

#spacinglabel {
	padding-top: 0;
}


#indentlabel {
	padding-top: 8px;
}

#fillattrhb {
	margin-left: 4px;
	position: relative;
	left: 38px;
}


#gradangle > .spinfield {
	width: 70px;
}

#orientationcontrol,
#rotation,
#misc_label {
	visibility: hidden;
	height: 16px;
}

#fliplabel {
	position: relative;
	bottom: 26px;
}

#rotationlabel {
	position: relative;
	bottom: 15px;
}

#ratio {
	position: relative;
	left: 163px;
}

button#button2.ui-pushbutton.jsdialog.sidebar {
	width: 151px;
	padding: 4px;
	position: relative;
	left: -10px;
}

#writedirection, #backgroundcolor {
	justify-content: end;
	margin-right: 0;
}

#linetransparency {
	position: relative;
	left: -20px;
}

